# Parallel_Programming

./: README.md
lab_1/: CMakeLists.txt  lab_1.cpp  verify.py  отчёт.docx
lab_1/перемножение матриц разных размеров/1200x1200/: matrixA.txt
lab_1/перемножение матриц разных размеров/200х200/: result.txt
lab_1/перемножение матриц разных размеров/400x400/: matrixA.txt  matrixB.txt  result.txt
lab_1/перемножение матриц разных размеров/800x800/: matrixA.txt  matrixB.txt  result.txt
lab_2/: CMakeLists.txt  README.md  lab_2.cpp
